@@ -1,1 +1,1 @@
-version   : 0.6.20 [swiss-army-knife addon] [13.06.2011] 
+version   : 0.6.21 [swiss-army-knife addon] [23.06.2011] 
