@@ -345,8 +345,16 @@ Fixes:
 
 
   
+----------------------------------------------------------------------------------------------------
+Date : 23.06.2011 | Release : 0.6.21    | Author  : H.Weber | CVS: 515 
+----------------------------------------------------------------------------------------------------
 
- 
+Changes:
+
+- Initial-Work for release named "V for vendetta"
+
+Fixes:
+
  
 
 
